[package]
name = "store-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0" 
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
env_logger = "0.10.0"
ntex = { version = "0.6.0", features = ["cookie", "tokio"]}
rand = "0.8.5"

chrono = { version = "0.4.23", features = ["serde"] }   #时间日期库，用来处理date
dotenvy = "0.15.6"  #读取.env文件并把里面的键值对加载进环境变量
serde = { version = "1.0.152", features = ["derive"] }  #序列化库，处理json
serde_json = "1.0.91"   #反序列化json
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "mysql"] } #数据库驱动，用于连接数据库
tempfile = "3.2"